@@ -36,20 +36,35 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
 
 import static java.util.Objects.requireNonNull;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.fail;
 import static org.openrewrite.Recipe.noop;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 import static org.openrewrite.test.SourceSpecs.text;
 
 class RecipeLifecycleTest implements RewriteTest {
+
+    @DocumentExample
+    @Test
+    void generateFile() {
+        rewriteRun(
+          spec -> spec
+            .recipe(toRecipe()
+              .withGenerator(() -> List.of(PlainText.builder().sourcePath(Paths.get("test.txt")).text("test").build()))
+              .withName("test.GeneratingRecipe")
+              .withMaxCycles(1)
+            )
+            .afterRecipe(run -> assertThat(run.getChangeset().getAllResults().stream()
+              .map(r -> r.getRecipeDescriptorsThatMadeChanges().getFirst().getName()))
+              .containsOnly("test.GeneratingRecipe")),
+          text(null, "test", spec -> spec.path("test.txt"))
+        );
+    }
 
     @Test
     void panic() {
@@ -69,41 +84,24 @@ class RecipeLifecycleTest implements RewriteTest {
         );
     }
 
-    @DocumentExample
-    @Test
-    void generateFile() {
-        rewriteRun(
-          spec -> spec
-            .recipe(toRecipe()
-              .withGenerator(() -> List.of(PlainText.builder().sourcePath(Paths.get("test.txt")).text("test").build()))
-              .withName("test.GeneratingRecipe")
-              .withMaxCycles(1)
-            )
-            .afterRecipe(run -> assertThat(run.getChangeset().getAllResults().stream()
-              .map(r -> r.getRecipeDescriptorsThatMadeChanges().get(0).getName()))
-              .containsOnly("test.GeneratingRecipe")),
-          text(null, "test", spec -> spec.path("test.txt"))
-        );
-    }
-
     @Test
     void twoGeneratingRecipesCreateOnlyOneFile() {
         rewriteRun(spec -> spec.recipeFromYaml("""
-                ---
-                type: specs.openrewrite.org/v1beta/recipe
-                name: test.recipe
-                displayName: Create twice
-                description: Scanning recipes later in the stack should scan files created by earlier recipes, avoiding duplicate file creation.
-                recipeList:
-                  - org.openrewrite.text.CreateTextFile:
-                      fileContents: first
-                      relativeFileName: test.txt
-                      overwriteExisting: false
-                  - org.openrewrite.text.CreateTextFile:
-                      fileContents: second
-                      relativeFileName: test.txt
-                      overwriteExisting: false
-                """,
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe
+              displayName: Create twice
+              description: Scanning recipes later in the stack should scan files created by earlier recipes, avoiding duplicate file creation.
+              recipeList:
+                - org.openrewrite.text.CreateTextFile:
+                    fileContents: first
+                    relativeFileName: test.txt
+                    overwriteExisting: false
+                - org.openrewrite.text.CreateTextFile:
+                    fileContents: second
+                    relativeFileName: test.txt
+                    overwriteExisting: false
+              """,
             "test.recipe"
           ),
           text(null, "first", spec -> spec.path("test.txt")));
@@ -120,9 +118,9 @@ class RecipeLifecycleTest implements RewriteTest {
               .isNotEmpty()
               .get()
               .as("Exception thrown in the scanning phase should record the responsible recipe")
-              .matches(m -> "org.openrewrite.RecipeLifecycleTest$ErrorDuringScanningPhase".equals(m.getRecipes().iterator().next().get(0).getDescriptor().getName()))
+              .matches(m -> "org.openrewrite.RecipeLifecycleTest$ErrorDuringScanningPhase".equals(m.getRecipes().iterator().next().getFirst().getDescriptor().getName()))
             )
-        ));
+          ));
     }
 
     @Value
@@ -176,7 +174,7 @@ class RecipeLifecycleTest implements RewriteTest {
 
         @Override
         public List<Recipe> getRecipeList() {
-            return Arrays.asList(
+            return List.of(
               new DeleteSourceFiles("test.txt"),
               new FindAndReplace("test", "", null, null, null, null, null, null));
         }
@@ -303,6 +301,26 @@ class RecipeLifecycleTest implements RewriteTest {
         }
     }
 
+    @DocumentExample
+    @Test
+    void accurateReportingOfRecipesMakingChanges() {
+        rewriteRun(
+          spec -> spec
+            .recipes(testRecipe("Change1"), noop(), testRecipe("Change2"))
+            .validateRecipeSerialization(false)
+            .afterRecipe(run -> {
+                var changes = run.getChangeset().getAllResults();
+                assertThat(changes).hasSize(1);
+                assertThat(changes.getFirst().getRecipeDescriptorsThatMadeChanges().stream().map(RecipeDescriptor::getName))
+                  .containsExactlyInAnyOrder("Change1", "Change2");
+            }),
+          text(
+            "Hello",
+            "Change2Change1Hello"
+          )
+        );
+    }
+
     @Issue("https://github.com/openrewrite/rewrite/issues/389")
     @Test
     void sourceFilesAcceptOnlyApplicableVisitors() {
@@ -315,26 +333,6 @@ class RecipeLifecycleTest implements RewriteTest {
             fooVisitor.visit(source, ctx);
             textVisitor.visit(source, ctx);
         }
-    }
-
-    @DocumentExample
-    @Test
-    void accurateReportingOfRecipesMakingChanges() {
-        rewriteRun(
-          spec -> spec
-            .recipes(testRecipe("Change1"), noop(), testRecipe("Change2"))
-            .validateRecipeSerialization(false)
-            .afterRecipe(run -> {
-                var changes = run.getChangeset().getAllResults();
-                assertThat(changes).hasSize(1);
-                assertThat(changes.get(0).getRecipeDescriptorsThatMadeChanges().stream().map(RecipeDescriptor::getName))
-                  .containsExactlyInAnyOrder("Change1", "Change2");
-            }),
-          text(
-            "Hello",
-            "Change2Change1Hello"
-          )
-        );
     }
 
     private Recipe testRecipe(@Language("markdown") String name) {
@@ -366,21 +364,21 @@ class RecipeLifecycleTest implements RewriteTest {
     }
 
     @Test
-    void canNotCallImperativeRecipeWithUnnecessaryArgsFromDeclarativeInTests() {
-        assertThatExceptionOfType(AssertionError.class).isThrownBy(() ->
-          rewriteRun(spec -> spec.recipeFromYaml("""
-                ---
-                type: specs.openrewrite.org/v1beta/recipe
-                name: test.recipe
-                displayName: Test Recipe
-                description: Test Recipe.
-                recipeList:
-                  - org.openrewrite.NoArgRecipe:
-                      foo: bar
-                """,
-              "test.recipe"
-            ),
-            text("Hi", "NoArgRecipeHi")));
+    void canCallImperativeRecipeWithUnnecessaryArgsFromDeclarativeInTests() {
+        rewriteRun(spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: test.recipe
+              displayName: Test Recipe
+              description: Test Recipe.
+              recipeList:
+                - org.openrewrite.NoArgRecipe:
+                    foo: bar
+              """,
+            "test.recipe"
+          ),
+          text("Hi", "NoArgRecipeHi")
+        );
     }
 
     @Test
@@ -476,8 +474,8 @@ class RecipeLifecycleTest implements RewriteTest {
     @Test
     void declarativeRecipeChainFromResourcesIncludesImperativeRecipesInDescriptors() {
         rewriteRun(spec -> spec.recipeFromResources("test.declarative.sample.a")
-            .afterRecipe(recipeRun -> assertThat(recipeRun.getChangeset().getAllResults().get(0)
-              .getRecipeDescriptorsThatMadeChanges().get(0).getRecipeList().get(0)
+            .afterRecipe(recipeRun -> assertThat(recipeRun.getChangeset().getAllResults().getFirst()
+              .getRecipeDescriptorsThatMadeChanges().getFirst().getRecipeList().getFirst()
               .getDisplayName()).isEqualTo("Change text")),
           text("Hi", "after"));
     }
