@@ -19,13 +19,10 @@ import okhttp3.OkHttpClient;
 import okhttp3.mockwebserver.*;
 import okhttp3.tls.HandshakeCertificates;
 import okhttp3.tls.HeldCertificate;
-import org.assertj.core.api.Condition;
 import org.intellij.lang.annotations.Language;
 import org.jspecify.annotations.Nullable;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
@@ -33,12 +30,11 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.*;
 import org.openrewrite.ipc.http.HttpSender;
 import org.openrewrite.ipc.http.HttpUrlConnectionSender;
+import org.openrewrite.maven.*;
 import org.openrewrite.maven.http.OkHttpSender;
-import org.openrewrite.maven.MavenDownloadingException;
-import org.openrewrite.maven.MavenExecutionContextView;
-import org.openrewrite.maven.MavenParser;
-import org.openrewrite.maven.MavenSettings;
 import org.openrewrite.maven.tree.*;
+import org.openrewrite.test.RewriteTest;
+import org.openrewrite.xml.tree.Xml;
 
 import javax.net.ssl.SSLSocketFactory;
 import java.io.IOException;
@@ -51,16 +47,19 @@ import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.stream.StreamSupport;
 
 import static java.util.Collections.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.openrewrite.maven.Assertions.pomXml;
 import static org.openrewrite.maven.tree.MavenRepository.MAVEN_CENTRAL;
 
 @SuppressWarnings({"HttpUrlsUsage"})
-class MavenPomDownloaderTest {
+class MavenPomDownloaderTest implements RewriteTest {
+
     @Test
     void ossSonatype() {
         InMemoryExecutionContext ctx = new InMemoryExecutionContext();
@@ -93,6 +92,60 @@ class MavenPomDownloaderTest {
         assertThat(normalized.getUri()).isEqualTo(expectedUrl);
     }
 
+    /**
+     * Documented in <a href="https://maven.apache.org/guides/mini/guide-multiple-repositories.html">Maven's guide</a>.
+     * Effective Maven settings take precedence over the local effective build POM.
+     */
+    @Test
+    void repositoryOrder() {
+        var ctx = MavenExecutionContextView.view(new InMemoryExecutionContext());
+        ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+            <settings>
+              <profiles>
+                <profile>
+                    <id>customize-repos</id>
+                    <repositories>
+                        <repository>
+                            <id>settings-provided</id>
+                            <url>https://repo.clojars.org</url>
+                        </repository>
+                    </repositories>
+                </profile>
+              </profiles>
+              <activeProfiles>
+                <activeProfile>customize-repos</activeProfile>
+              </activeProfiles>
+            </settings>
+            """
+        ), ctx));
+
+        rewriteRun(
+          pomXml(
+            //language=xml
+            """
+              <project>
+                  <groupId>org.openrewrite.test</groupId>
+                  <artifactId>foo</artifactId>
+                  <version>0.1.0-SNAPSHOT</version>
+                  <repositories>
+                      <repository>
+                          <id>local-provided</id>
+                          <url>https://oss.sonatype.org/content/repositories/releases</url>
+                      </repository>
+                  </repositories>
+              </project>
+              """,
+            spec -> spec.beforeRecipe(pom -> {
+                MavenResolutionResult result = pom.getMarkers().findFirst(MavenResolutionResult.class).orElseThrow();
+                assertThat(StreamSupport.stream(new MavenPomDownloader(ctx).distinctNormalizedRepositories(result.getPom().getRepositories(), result.getPom(), null).spliterator(), false)
+                  .map(MavenRepository::getId))
+                  .containsExactly("settings-provided", "local-provided");
+            }))
+        );
+    }
+
     @Nested
     class WithNativeHttpURLConnectionAndTLS {
         private final ExecutionContext ctx = HttpSenderExecutionContextView.view(new InMemoryExecutionContext())
@@ -102,42 +155,13 @@ class MavenPomDownloaderTest {
         @Test
         void centralIdOverridesDefaultRepository() {
             var ctx = MavenExecutionContextView.view(this.ctx);
-            ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
-              //language=xml
-              """
-                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
-                  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
-                                      https://maven.apache.org/xsd/settings-1.0.0.xsd">
-                  <profiles>
-                    <profile>
-                        <id>central</id>
-                        <repositories>
-                            <repository>
-                                <id>central</id>
-                                <url>https://internalartifactrepository.yourorg.com</url>
-                            </repository>
-                        </repositories>
-                    </profile>
-                  </profiles>
-                  <activeProfiles>
-                    <activeProfile>central</activeProfile>
-                  </activeProfiles>
-                </settings>
-                """
-            ), ctx));
-
-            // Avoid actually trying to reach the made-up https://internalartifactrepository.yourorg.com
-            for (MavenRepository repository : ctx.getRepositories()) {
-                repository.setKnownToExist(true);
-            }
-
+            var centralOverride = new MavenRepository("repo", "https://google.com/definitelydoesnotexist/", null, null, true, null, null, null, null);
             var downloader = new MavenPomDownloader(emptyMap(), ctx);
-            Collection<MavenRepository> repos = downloader.distinctNormalizedRepositories(emptyList(), null, null);
-            assertThat(repos).areExactly(1, new Condition<>(repo -> "central".equals(repo.getId()),
-              "id \"central\""));
-            assertThat(repos).areExactly(1, new Condition<>(repo -> "https://internalartifactrepository.yourorg.com".equals(repo.getUri()),
-              "URI https://internalartifactrepository.yourorg.com"));
+            try {
+                downloader.download(new GroupArtifactVersion("org.openrewrite", "nonexistent", "7.0.0"), null, null, List.of(centralOverride));
+                Assertions.fail();
+            } catch (MavenDownloadingException ignore) {
+            }
         }
 
         @Test
@@ -176,6 +200,28 @@ class MavenPomDownloaderTest {
         }
 
         @Test
+        void onlyAccessRequiredRepositories() throws MavenDownloadingException {
+            var ctx = MavenExecutionContextView.view(this.ctx);
+            // Avoid actually trying to reach the made-up https://internalartifactrepository.yourorg.com
+            for (MavenRepository repository : ctx.getRepositories()) {
+                repository.setKnownToExist(true);
+            }
+
+            MavenRepository nonExistentRepo = new MavenRepository("repo", "https://definitelydoesnotexist2.xyz/", null, null, false, null, null, null, null);
+            List<String> attemptedUris = new ArrayList<>();
+            ctx.setResolutionListener(new ResolutionEventListener() {
+                @Override
+                public void repositoryAccessFailed(String uri, Throwable e) {
+                    attemptedUris.add(uri);
+                }
+            });
+
+            new MavenPomDownloader(ctx)
+              .download(new GroupArtifactVersion("org.openrewrite", "rewrite-core", "7.0.0"), null, null, List.of(MAVEN_CENTRAL, nonExistentRepo));
+            assertThat(attemptedUris).isEmpty();
+        }
+
+        @Test
         void listenerRecordsFailedRepositoryAccess() {
             var ctx = MavenExecutionContextView.view(new InMemoryExecutionContext());
             // Avoid actually trying to reach a made-up URL
@@ -207,10 +253,7 @@ class MavenPomDownloaderTest {
             ctx.setMavenSettings(MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
               //language=xml
               """
-                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
-                  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
-                                      https://maven.apache.org/xsd/settings-1.0.0.xsd">
+                <settings>
                   <mirrors>
                     <mirror>
                       <id>mirror</id>
@@ -314,7 +357,7 @@ class MavenPomDownloaderTest {
 
         @Test
         @Disabled
-        void dontFetchSnapshotsFromReleaseRepos() {
+        void dontFetchSnapshotsFromReleaseRepos() throws Exception {
             try (MockWebServer snapshotRepo = new MockWebServer();
                  MockWebServer releaseRepo = new MockWebServer()) {
                 snapshotRepo.setDispatcher(new Dispatcher() {
@@ -322,39 +365,39 @@ class MavenPomDownloaderTest {
                     public MockResponse dispatch(RecordedRequest request) {
                         MockResponse response = new MockResponse().setResponseCode(200);
                         if (request.getPath() != null && request.getPath().contains("maven-metadata")) {
+                            //language=xml
                             response.setBody(
-                              //language=xml
                               """
-                                    <metadata modelVersion="1.1.0">
-                                      <groupId>org.springframework.cloud</groupId>
-                                      <artifactId>spring-cloud-dataflow-build</artifactId>
-                                      <version>2.10.0-SNAPSHOT</version>
-                                      <versioning>
-                                        <snapshot>
-                                          <timestamp>20220201.001946</timestamp>
-                                          <buildNumber>85</buildNumber>
-                                        </snapshot>
-                                        <lastUpdated>20220201001950</lastUpdated>
-                                        <snapshotVersions>
-                                          <snapshotVersion>
-                                            <extension>pom</extension>
-                                            <value>2.10.0-20220201.001946-85</value>
-                                            <updated>20220201001946</updated>
-                                          </snapshotVersion>
-                                        </snapshotVersions>
-                                      </versioning>
-                                    </metadata>
+                                <metadata modelVersion="1.1.0">
+                                  <groupId>org.springframework.cloud</groupId>
+                                  <artifactId>spring-cloud-dataflow-build</artifactId>
+                                  <version>2.10.0-SNAPSHOT</version>
+                                  <versioning>
+                                    <snapshot>
+                                      <timestamp>20220201.001946</timestamp>
+                                      <buildNumber>85</buildNumber>
+                                    </snapshot>
+                                    <lastUpdated>20220201001950</lastUpdated>
+                                    <snapshotVersions>
+                                      <snapshotVersion>
+                                        <extension>pom</extension>
+                                        <value>2.10.0-20220201.001946-85</value>
+                                        <updated>20220201001946</updated>
+                                      </snapshotVersion>
+                                    </snapshotVersions>
+                                  </versioning>
+                                </metadata>
                                 """
                             );
                         } else if (request.getPath() != null && request.getPath().endsWith(".pom")) {
+                            //language=xml
                             response.setBody(
-                              //language=xml
                               """
-                                    <project>
-                                        <groupId>org.springframework.cloud</groupId>
-                                        <artifactId>spring-cloud-dataflow-build</artifactId>
-                                        <version>2.10.0-SNAPSHOT</version>
-                                    </project>
+                                <project>
+                                    <groupId>org.springframework.cloud</groupId>
+                                    <artifactId>spring-cloud-dataflow-build</artifactId>
+                                    <version>2.10.0-SNAPSHOT</version>
+                                </project>
                                 """
                             );
                         }
@@ -380,45 +423,173 @@ class MavenPomDownloaderTest {
                 MavenParser.builder().build().parse(ctx,
                   //language=xml
                   """
-                        <project>
-                            <modelVersion>4.0.0</modelVersion>
+                    <project>
+                        <modelVersion>4.0.0</modelVersion>
                     
-                            <groupId>org.openrewrite.test</groupId>
-                            <artifactId>foo</artifactId>
-                            <version>0.1.0-SNAPSHOT</version>
+                        <groupId>org.openrewrite.test</groupId>
+                        <artifactId>foo</artifactId>
+                        <version>0.1.0-SNAPSHOT</version>
                     
-                            <repositories>
-                              <repository>
-                                <id>snapshot</id>
-                                <snapshots>
-                                  <enabled>true</enabled>
-                                </snapshots>
-                                <url>http://%s:%d</url>
-                              </repository>
-                              <repository>
-                                <id>release</id>
-                                <snapshots>
-                                  <enabled>false</enabled>
-                                </snapshots>
-                                <url>http://%s:%d</url>
-                              </repository>
-                            </repositories>
+                        <repositories>
+                          <repository>
+                            <id>snapshot</id>
+                            <snapshots>
+                              <enabled>true</enabled>
+                            </snapshots>
+                            <url>http://%s:%d</url>
+                          </repository>
+                          <repository>
+                            <id>release</id>
+                            <snapshots>
+                              <enabled>false</enabled>
+                            </snapshots>
+                            <url>http://%s:%d</url>
+                          </repository>
+                        </repositories>
                     
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.springframework.cloud</groupId>
-                                    <artifactId>spring-cloud-dataflow-build</artifactId>
-                                    <version>2.10.0-SNAPSHOT</version>
-                                </dependency>
-                            </dependencies>
-                        </project>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.springframework.cloud</groupId>
+                                <artifactId>spring-cloud-dataflow-build</artifactId>
+                                <version>2.10.0-SNAPSHOT</version>
+                            </dependency>
+                        </dependencies>
+                    </project>
                     """.formatted(snapshotRepo.getHostName(), snapshotRepo.getPort(), releaseRepo.getHostName(), releaseRepo.getPort())
                 );
 
                 assertThat(snapshotRepo.getRequestCount()).isGreaterThan(1);
                 assertThat(metadataPaths.get()).isEqualTo(0);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+            }
+        }
+
+        @Issue("https://github.com/openrewrite/rewrite-maven-plugin/issues/862")
+        @Test
+        void fetchSnapshotWithCorrectClassifier() throws Exception {
+            try (MockWebServer snapshotServer = new MockWebServer()) {
+                snapshotServer.setDispatcher(new Dispatcher() {
+                    @Override
+                    public MockResponse dispatch(RecordedRequest request) {
+                        MockResponse response = new MockResponse().setResponseCode(200);
+                        if (request.getPath() != null && request.getPath().contains("maven-metadata")) {
+                            //language=xml
+                            response.setBody(
+                              """
+                                <metadata modelVersion="1.1.0">
+                                  <groupId>com.some</groupId>
+                                  <artifactId>an-artifact</artifactId>
+                                  <version>10.5.0-SNAPSHOT</version>
+                                  <versioning>
+                                    <snapshot>
+                                      <timestamp>20250113.114247</timestamp>
+                                      <buildNumber>36</buildNumber>
+                                    </snapshot>
+                                    <lastUpdated>20250113114247</lastUpdated>
+                                    <snapshotVersions>
+                                      <snapshotVersion>
+                                        <classifier>javadoc</classifier>
+                                        <extension>jar</extension>
+                                        <value>10.5.0-20250113.114247-36</value>
+                                        <updated>20250113114247</updated>
+                                      </snapshotVersion>
+                                      <snapshotVersion>
+                                        <classifier>tests</classifier>
+                                        <extension>jar</extension>
+                                        <value>10.5.0-20250113.114244-35</value>
+                                        <updated>20250113114244</updated>
+                                      </snapshotVersion>
+                                      <snapshotVersion>
+                                        <classifier>sources</classifier>
+                                        <extension>jar</extension>
+                                        <value>10.5.0-20250113.114242-34</value>
+                                        <updated>20250113114242</updated>
+                                      </snapshotVersion>
+                                      <snapshotVersion>
+                                        <extension>jar</extension>
+                                        <value>10.5.0-20250113.114227-33</value>
+                                        <updated>20250113114227</updated>
+                                      </snapshotVersion>
+                                      <snapshotVersion>
+                                        <extension>pom</extension>
+                                        <value>10.5.0-20250113.114227-33</value>
+                                        <updated>20250113114227</updated>
+                                      </snapshotVersion>
+                                    </snapshotVersions>
+                                  </versioning>
+                                </metadata>
+                                """
+                            );
+                        } else if (request.getPath() != null && request.getPath().endsWith(".pom")) {
+                            //language=xml
+                            response.setBody(
+                              """
+                                <project>
+                                     <groupId>com.some</groupId>
+                                     <artifactId>an-artifact</artifactId>
+                                     <version>10.5.0-SNAPSHOT</version>
+                                </project>
+                                """
+                            );
+                        }
+                        return response;
+                    }
+                });
+
+                snapshotServer.start();
+
+                //language=xml
+                MavenParser.builder().build().parse(ctx,
+                  """
+                    <project>
+                        <modelVersion>4.0.0</modelVersion>
+                        <groupId>org.openrewrite.test</groupId>
+                        <artifactId>foo</artifactId>
+                        <version>0.1.0-SNAPSHOT</version>
+                        <repositories>
+                          <repository>
+                            <id>snapshot</id>
+                            <snapshots>
+                              <enabled>true</enabled>
+                            </snapshots>
+                            <url>http://%s:%d</url>
+                          </repository>
+                        </repositories>
+                        <dependencies>
+                            <dependency>
+                                 <groupId>com.some</groupId>
+                                 <artifactId>an-artifact</artifactId>
+                                 <version>10.5.0-SNAPSHOT</version>
+                            </dependency>
+                        </dependencies>
+                    </project>
+                    """.formatted(snapshotServer.getHostName(), snapshotServer.getPort())
+                );
+
+                MavenRepository snapshotRepo = MavenRepository.builder()
+                  .id("id")
+                  .uri("http://%s:%d/maven/".formatted(snapshotServer.getHostName(), snapshotServer.getPort()))
+                  .build();
+
+                var gav = new GroupArtifactVersion("com.some", "an-artifact", "10.5.0-SNAPSHOT");
+                var mavenPomDownloader = new MavenPomDownloader(emptyMap(), ctx);
+
+                var pomPath = Paths.get("pom.xml");
+                var pom = Pom.builder()
+                  .sourcePath(pomPath)
+                  .repository(snapshotRepo)
+                  .properties(singletonMap("REPO_URL", snapshotRepo.getUri()))
+                  .gav(new ResolvedGroupArtifactVersion(
+                    "${REPO_URL}", gav.getGroupId(), gav.getArtifactId(), gav.getVersion(), null))
+                  .build();
+                var resolvedPom = ResolvedPom.builder()
+                  .requested(pom)
+                  .properties(singletonMap("REPO_URL", snapshotRepo.getUri()))
+                  .repositories(singletonList(snapshotRepo))
+                  .build();
+
+                // Ensure that classifier 'javadoc', 'tests' and 'sources' are not used
+                var downloadedPom = mavenPomDownloader.download(gav, null, resolvedPom, List.of(snapshotRepo));
+                assertThat(downloadedPom).returns("10.5.0-20250113.114227-33", Pom::getDatedSnapshotVersion);
             }
         }
 
@@ -426,7 +597,7 @@ class MavenPomDownloaderTest {
         void deriveMetaDataFromFileRepository(@TempDir Path repoPath) throws IOException, MavenDownloadingException {
             Path fred = repoPath.resolve("fred/fred");
 
-            for (String version : Arrays.asList("1.0.0", "1.1.0", "2.0.0")) {
+            for (String version : List.of("1.0.0", "1.1.0", "2.0.0")) {
                 Path versionPath = fred.resolve(version);
                 Files.createDirectories(versionPath);
                 Files.writeString(versionPath.resolve("fred-" + version + ".pom"), "");
@@ -440,59 +611,59 @@ class MavenPomDownloaderTest {
               .build();
             MavenMetadata metaData = new MavenPomDownloader(emptyMap(), ctx)
               .downloadMetadata(new GroupArtifact("fred", "fred"), null, List.of(repository));
-            assertThat(metaData.getVersioning().getVersions()).hasSize(3).containsAll(Arrays.asList("1.0.0", "1.1.0", "2.0.0"));
+            assertThat(metaData.getVersioning().getVersions()).hasSize(3).containsAll(List.of("1.0.0", "1.1.0", "2.0.0"));
         }
 
         @SuppressWarnings("ConstantConditions")
         @Test
         void mergeMetadata() throws IOException {
             @Language("xml") String metadata1 = """
-                  <metadata>
-                      <groupId>org.springframework.boot</groupId>
-                      <artifactId>spring-boot</artifactId>
-                      <versioning>
-                          <versions>
-                              <version>2.3.3</version>
-                              <version>2.4.1</version>
-                              <version>2.4.2</version>
-                          </versions>
-                          <snapshot>
-                              <timestamp>20220927.033510</timestamp>
-                              <buildNumber>223</buildNumber>
-                          </snapshot>
-                          <snapshotVersions>
-                              <snapshotVersion>
-                                  <extension>pom.asc</extension>
-                                  <value>0.1.0-20220927.033510-223</value>
-                                  <updated>20220927033510</updated>
-                              </snapshotVersion>
-                          </snapshotVersions>
-                      </versioning>
-                  </metadata>
+              <metadata>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot</artifactId>
+                  <versioning>
+                      <versions>
+                          <version>2.3.3</version>
+                          <version>2.4.1</version>
+                          <version>2.4.2</version>
+                      </versions>
+                      <snapshot>
+                          <timestamp>20220927.033510</timestamp>
+                          <buildNumber>223</buildNumber>
+                      </snapshot>
+                      <snapshotVersions>
+                          <snapshotVersion>
+                              <extension>pom.asc</extension>
+                              <value>0.1.0-20220927.033510-223</value>
+                              <updated>20220927033510</updated>
+                          </snapshotVersion>
+                      </snapshotVersions>
+                  </versioning>
+              </metadata>
               """;
 
             @Language("xml") String metadata2 = """
-                  <metadata modelVersion="1.1.0">
-                      <groupId>org.springframework.boot</groupId>
-                      <artifactId>spring-boot</artifactId>
-                      <versioning>
-                          <versions>
-                              <version>2.3.2</version>
-                              <version>2.3.3</version>
-                          </versions>
-                          <snapshot>
-                              <timestamp>20210115.042754</timestamp>
-                              <buildNumber>180</buildNumber>
-                          </snapshot>
-                          <snapshotVersions>
-                              <snapshotVersion>
-                                  <extension>pom.asc</extension>
-                                  <value>0.1.0-20210115.042754-180</value>
-                                  <updated>20210115042754</updated>
-                              </snapshotVersion>
-                          </snapshotVersions>
-                      </versioning>
-                  </metadata>
+              <metadata modelVersion="1.1.0">
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot</artifactId>
+                  <versioning>
+                      <versions>
+                          <version>2.3.2</version>
+                          <version>2.3.3</version>
+                      </versions>
+                      <snapshot>
+                          <timestamp>20210115.042754</timestamp>
+                          <buildNumber>180</buildNumber>
+                      </snapshot>
+                      <snapshotVersions>
+                          <snapshotVersion>
+                              <extension>pom.asc</extension>
+                              <value>0.1.0-20210115.042754-180</value>
+                              <updated>20210115042754</updated>
+                          </snapshotVersion>
+                      </snapshotVersions>
+                  </versioning>
+              </metadata>
               """;
 
             var m1 = MavenMetadata.parse(metadata1.getBytes());
@@ -504,9 +675,9 @@ class MavenPomDownloaderTest {
             assertThat(merged.getVersioning().getSnapshot().getBuildNumber()).isEqualTo("223");
             assertThat(merged.getVersioning().getVersions()).hasSize(4).contains("2.3.2", "2.3.3", "2.4.1", "2.4.2");
             assertThat(merged.getVersioning().getSnapshotVersions()).hasSize(2);
-            assertThat(merged.getVersioning().getSnapshotVersions().get(0).getExtension()).isNotNull();
-            assertThat(merged.getVersioning().getSnapshotVersions().get(0).getValue()).isNotNull();
-            assertThat(merged.getVersioning().getSnapshotVersions().get(0).getUpdated()).isNotNull();
+            assertThat(merged.getVersioning().getSnapshotVersions().getFirst().getExtension()).isNotNull();
+            assertThat(merged.getVersioning().getSnapshotVersions().getFirst().getValue()).isNotNull();
+            assertThat(merged.getVersioning().getSnapshotVersions().getFirst().getUpdated()).isNotNull();
         }
 
         @Test
@@ -519,11 +690,11 @@ class MavenPomDownloaderTest {
             Files.writeString(localPom,
               //language=xml
               """
-                 <project>
-                   <groupId>com.bad</groupId>
-                   <artifactId>bad-artifact</artifactId>
-                   <version>1</version>
-                 </project>
+                <project>
+                  <groupId>com.bad</groupId>
+                  <artifactId>bad-artifact</artifactId>
+                  <version>1</version>
+                </project>
                 """
             );
 
@@ -550,11 +721,11 @@ class MavenPomDownloaderTest {
             Files.writeString(localPom,
               //language=xml
               """
-                 <project>
-                   <groupId>com.bad</groupId>
-                   <artifactId>bad-artifact</artifactId>
-                   <version>1</version>
-                 </project>
+                <project>
+                  <groupId>com.bad</groupId>
+                  <artifactId>bad-artifact</artifactId>
+                  <version>1</version>
+                </project>
                 """
             );
             Path localJar = localRepository.resolve("com/bad/bad-artifact/1/bad-artifact-1.jar");
@@ -574,7 +745,7 @@ class MavenPomDownloaderTest {
         }
 
         @Test
-        void dontAllowPomDowloadFailureWithoutJar(@TempDir Path localRepository) throws IOException, MavenDownloadingException {
+        void dontAllowPomDownloadFailureWithoutJar(@TempDir Path localRepository) {
             MavenRepository mavenLocal = MavenRepository.builder()
               .id("local")
               .uri(localRepository.toUri().toString())
@@ -588,7 +759,7 @@ class MavenPomDownloaderTest {
         }
 
         @Test
-        void allowPomDowloadFailureWithJar(@TempDir Path localRepository) throws IOException, MavenDownloadingException {
+        void allowPomDownloadFailureWithJar(@TempDir Path localRepository) throws IOException, MavenDownloadingException {
             MavenRepository mavenLocal = MavenRepository.builder()
               .id("local")
               .uri(localRepository.toUri().toString())
@@ -1089,14 +1260,15 @@ class MavenPomDownloaderTest {
         @Test
         @DisplayName("Don't throw exception if there is no pom and but there is a jar for the artifact")
         @Issue("https://github.com/openrewrite/rewrite/issues/4687")
-        void pomNotFoundWithJarFoundShouldntThrow() throws Exception {
+        void pomNotFoundWithJarFoundShouldNotThrow() throws Exception {
             try (MockWebServer mockRepo = getMockServer()) {
                 mockRepo.setDispatcher(new Dispatcher() {
                     @Override
                     public MockResponse dispatch(RecordedRequest recordedRequest) {
                         assert recordedRequest.getPath() != null;
-                        if (recordedRequest.getPath().endsWith("fred/fred/1/fred-1.pom"))
+                        if (recordedRequest.getPath().endsWith("fred/fred/1/fred-1.pom")) {
                             return new MockResponse().setResponseCode(404).setBody("");
+                        }
                         return new MockResponse().setResponseCode(200).setBody("some bytes so the jar isn't empty");
                     }
                 });
@@ -1117,4 +1289,34 @@ class MavenPomDownloaderTest {
             }
         }
     }
+
+    @Test
+    void resolveDependencies() throws MavenDownloadingExceptions {
+        Xml.Document doc = (Xml.Document) MavenParser.builder().build().parse("""
+                  <project>
+                      <parent>
+                          <groupId>org.springframework.boot</groupId>
+                          <artifactId>spring-boot-starter-parent</artifactId>
+                          <version>3.2.0</version>
+                          <relativePath/>
+                      </parent>
+                      <groupId>com.example</groupId>
+                      <artifactId>demo</artifactId>
+                      <version>0.0.1-SNAPSHOT</version>
+                      <name>demo</name>
+                      <dependencies>
+                          <dependency>
+                              <groupId>org.springframework.boot</groupId>
+                              <artifactId>spring-boot-starter-web</artifactId>
+                          </dependency>
+                      </dependencies>
+                  </project>
+        """).toList().getFirst();
+        MavenResolutionResult resolutionResult = doc.getMarkers().findFirst(MavenResolutionResult.class).orElseThrow();
+        resolutionResult = resolutionResult.resolveDependencies(new MavenPomDownloader(Collections.emptyMap(), new InMemoryExecutionContext(), null, null), new InMemoryExecutionContext());
+        List<ResolvedDependency> deps = resolutionResult.getDependencies().get(Scope.Compile);
+        assertThat(deps).hasSize(35);
+    }
+
+
 }
